--- a/package.json
+++ b/package.json
@@ -1,24 +1,50 @@
 {
   "name": "alien-deepsignals",
   "version": "0.0.1",
-  "type": "module",
+  "private": false,
+  "author": "CCherry07",
+  "module": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "license": "MIT",
+  "files": [
+    "dist"
+  ],
+  "exports": {
+    ".": {
+      "import": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    }
+  },
+  "description": "AlienDeepSignals 🧶 -alien signals, but using regular JavaScript objects",
   "scripts": {
-    "dev": "farm",
-    "start": "farm",
-    "build": "farm build",
-    "preview": "farm preview",
-    "clean": "farm clean",
-    "test": "vitest"
+    "test": "vitest",
+    "dev": "tsup --watch src",
+    "build": "tsup",
+    "release": "bumpp && npm run build && npm publish --registry=https://registry.npmjs.org/"
   },
   "devDependencies": {
-    "@farmfe/cli": "^1.0.2",
-    "@farmfe/core": "^1.3.0",
+    "bumpp": "^9.9.2",
+    "tsup": "^8.3.5",
     "typescript": "^5.4.3",
     "vitest": "^2.1.8"
   },
-  "packageManager": "pnpm@9.14.2+sha512.6e2baf77d06b9362294152c851c4f278ede37ab1eba3a55fda317a4a17b209f4dbb973fb250a77abc463a341fcb1f17f17cfa24091c4eb319cda0d9b84278387",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/CCherry07/alien-deepsignals.git"
+  },
+  "keywords": [
+    "signal",
+    "signals",
+    "deepsignals",
+    "alien-signals",
+    "alien-deepsignals"
+  ],
+  "bugs": {
+    "url": "https://github.com/CCherry07/alien-deepsignals/issues"
+  },
+  "homepage": "https://github.com/CCherry07/alien-deepsignals#readme",
   "dependencies": {
-    "@farmfe/js-plugin-dts": "^0.6.4",
     "alien-signals": "^0.4.12"
-  }
+  },
+  "packageManager": "pnpm@9.14.2+sha512.6e2baf77d06b9362294152c851c4f278ede37ab1eba3a55fda317a4a17b209f4dbb973fb250a77abc463a341fcb1f17f17cfa24091c4eb319cda0d9b84278387"
 }
