--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "build": "tsup",
     "release": "bumpp && npm run build && npm publish --registry=https://registry.npmjs.org/"
   },
+  "dependencies": {
+    "alien-signals": "latest"
+  },
   "devDependencies": {
     "bumpp": "^9.9.2",
     "tsup": "^8.3.5",
@@ -44,8 +47,5 @@
     "url": "https://github.com/CCherry07/alien-deepsignals/issues"
   },
   "homepage": "https://github.com/CCherry07/alien-deepsignals#readme",
-  "dependencies": {
-    "alien-signals": "^0.4.12"
-  },
   "packageManager": "pnpm@9.14.2+sha512.6e2baf77d06b9362294152c851c4f278ede37ab1eba3a55fda317a4a17b209f4dbb973fb250a77abc463a341fcb1f17f17cfa24091c4eb319cda0d9b84278387"
 }
