--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "alien-deepsignals",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "private": false,
   "author": "CCherry07",
   "license": "MIT",
@@ -24,7 +24,10 @@
     "release": "bumpp && npm run build && npm publish --registry=https://registry.npmjs.org/"
   },
   "dependencies": {
-    "alien-signals": "^1.0.0"
+    "alien-signals": "^1.0.13"
+  },
+  "peerDependencies": {
+    "alien-signals": "^1.0.13"
   },
   "devDependencies": {
     "@types/node": "^22.10.9",
